--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+	<head>
+		<link type="text/css" rel="stylesheet" href="stylesheet3.css"/>
+		<title>Do LA</title>
+	</head>
+	<body>
+		<a href="one_does_not.html" class="button">
+    	<span>Do Learning Analytics</span>
+		</a>
+  </body>
+</html>
